[gd_scene load_steps=28 format=3 uid="uid://b7l4i678ih04v"]

[ext_resource type="Script" path="res://EyeSeer.gd" id="1_jhbr0"]
[ext_resource type="Texture2D" uid="uid://cbbc23nww1hv2" path="res://Assets/Sprites/enemies/EyeSeer.png" id="2_5l16k"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dtduc"]
atlas = ExtResource("2_5l16k")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5nk0"]
atlas = ExtResource("2_5l16k")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gy7vb"]
atlas = ExtResource("2_5l16k")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3i03c"]
atlas = ExtResource("2_5l16k")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pyuai"]
atlas = ExtResource("2_5l16k")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdvfs"]
atlas = ExtResource("2_5l16k")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1vcy"]
atlas = ExtResource("2_5l16k")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0ayh"]
atlas = ExtResource("2_5l16k")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ych3"]
atlas = ExtResource("2_5l16k")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_80tqq"]
atlas = ExtResource("2_5l16k")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7j41"]
atlas = ExtResource("2_5l16k")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxpcu"]
atlas = ExtResource("2_5l16k")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_641nh"]
atlas = ExtResource("2_5l16k")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xgcc"]
atlas = ExtResource("2_5l16k")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8kpr"]
atlas = ExtResource("2_5l16k")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5k17e"]
atlas = ExtResource("2_5l16k")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdjtq"]
atlas = ExtResource("2_5l16k")
region = Rect2(0, 256, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_0f51g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtduc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5nk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gy7vb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3i03c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pyuai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdvfs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1vcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0ayh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdvfs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pyuai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3i03c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gy7vb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5nk0")
}],
"loop": true,
"name": &"blink",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ych3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80tqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7j41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxpcu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_641nh")
}],
"loop": true,
"name": &"look",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xgcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8kpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5k17e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdjtq")
}],
"loop": true,
"name": &"shake",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_4bdfm"]
resource_name = "idleSeer"
length = 3.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.6, 2.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [&"blink", &"shake", &"look"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.7, 2.9, 3.1, 3.3, 3.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 0, 1, 2, 3, 3, 2, 1, 0, 0, 1, 0, 3, 0]
}

[sub_resource type="Animation" id="Animation_7ptsh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"blink"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_lt7fq"]
resource_name = "moving_towards"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [&"look", &"blink", &"look"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ldgtv"]
_data = {
"RESET": SubResource("Animation_7ptsh"),
"idleSeer": SubResource("Animation_4bdfm"),
"moving_towards": SubResource("Animation_lt7fq")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_ol2ft"]
radius = 19.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oov8c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_38vpb"]
size = Vector2(60, 20)

[node name="EyeSeer" type="CharacterBody2D"]
script = ExtResource("1_jhbr0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0f51g")
animation = &"blink"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ldgtv")
}
autoplay = "idleSeer"

[node name="EnemyBox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ol2ft")

[node name="LeftCheck" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LeftCheck"]
polygon = PackedVector2Array(-14, -13, -14, 13, -224, 18, -222, -47)

[node name="RightCheck" type="Area2D" parent="."]
scale = Vector2(-1, -1)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RightCheck"]
polygon = PackedVector2Array(-14, -13, -14, 13, -239, 49, -238, -24)

[node name="floor_right" type="Area2D" parent="."]
position = Vector2(65, 17)
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor_right"]
shape = SubResource("RectangleShape2D_oov8c")

[node name="floor_left" type="Area2D" parent="."]
position = Vector2(-60, 16)
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor_left"]
shape = SubResource("RectangleShape2D_oov8c")

[node name="Area2D" type="Area2D" parent="."]

[node name="check" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_38vpb")

[node name="back_off" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
